# terminology-service

./: .gitignore  manage.py  pyproject.toml
Komtek/: asgi.py  settings.py  urls.py  wsgi.py
docs/: openapi-schema.yml
test_task/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
test_task/migrations/: 0001_initial.py  0002_auto_20200202_1339.py  0003_auto_20200208_1300.py
test_task/tests/: test_service.py  test_services.py  test_views.py
